fixed blobs not showing

--- a/src/Components/NavStyle.module.css
+++ b/src/Components/NavStyle.module.css
@@ -86,8 +86,6 @@
 
 @media (pointer: none), (pointer: coarse) {
   .navWrapper {
-    top: auto;
-    bottom: 35px;
     width: 90%;
     max-width: 400px;
     justify-content: space-evenly;
